Vermeidung von hard-codierten Path separatoren