@@ -6,7 +6,6 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -78,7 +77,7 @@ public class LoadIndexHandler {
 				.registerTypeAdapter(Value.class, new ValueDeserializer()) //
 				.setPrettyPrinting() //
 				.create();
-		Path path = Paths.get(dataService.getStoragePath() + "/cache/jsonTableSearch");
+		Path path = Path.of(dataService.getStoragePath().toString(), "cache", "jsonTableSearch");
 
 		File jsonFile = new File(path.toString());
 		jsonFile.createNewFile();
